...
                        Text(text = titleText, fontWeight = FontWeight.Bold)
                    },
                    navigationIcon = {
                        if (isSpecial) {
                            IconButton(
                                onClick = { navController.popBackStack() },
                                modifier = Modifier.testTag("back_button")
                            ) {
                                Icon(
                                    painter = painterResource(id = R.drawable.ic_arrow_back),
                                    contentDescription = "Nazad",
                                    modifier = Modifier.size(24.dp),
                                )
...
                    actions = {
                        if (isAdmin && (currentRoute == "pets")) {
                            IconButton(
                                onClick = { 
                                    navController.navigate("add_animal")
                                },
                                modifier = Modifier.testTag("add_animal_button")
                            ) {
                                Icon(Icons.Default.Add, contentDescription = "Dodaj životinju")
                            }
                        }
                        Text(
                            text = if (isAdmin) "ADMIN" else "Domi",
...
        },
    ) { innerPadding ->
        Surface(
            modifier = Modifier
                .fillMaxSize()
                .padding(innerPadding)
                .testTag("glavni_ekran"),
            color = MaterialTheme.colorScheme.background,
        ) {
            NavigationGraph(
                navController, 
                userName, 
                userEmail, 
...
